# mig-gpu-mon

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  README_EN.md  install.sh
src/: app.rs  event.rs  main.rs
src/gpu/: metrics.rs  mod.rs  nvml.rs
src/ui/: dashboard.rs
